--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,8 @@
-title: Minimalistic
+title: eunlog
+url: https://Soeun-Jang.github.io
 logo: /assets/img/logo.jpg
-email: person@address.com
-description: Minimalistic is a theme powered by Jekyll.
+email: azulcielo_@naver.com
+description: about develop.
 favicon: true
 color-scheme: auto
 
@@ -13,7 +14,7 @@ plugins:
 platforms:
   - name: GitHub
     icon: <i class="fa-brands fa-github"></i>
-    link: https://github.com/vaibhavvikas
+    link: https://github.com/Soeun-Jang
   - name: LinkedIn
     icon: <i class="fa-brands fa-linkedin"></i>
     link: https://www.linkedin.com/in/vaibhavvikas
